# DOVER

./: MANIFEST.in  pyproject.toml
dovervqa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dover.egg-info/: PKG-INFO  SOURCES.txt
src/dover/datasets/: dover_datasets.py
